[gd_scene load_steps=3 format=3 uid="uid://ctycsiv1y8oc4"]

[ext_resource type="Script" path="res://Battle/party_member_stat_labels.gd" id="1_paq1v"]
[ext_resource type="Texture2D" uid="uid://ck5aopqrr8801" path="res://Assets/Art/Faces/partyface (2).png" id="2_ctm6i"]

[node name="PartyMemberContainer" type="PanelContainer"]
offset_right = 91.0
offset_bottom = 36.0
script = ExtResource("1_paq1v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_top = 0

[node name="PlayerStatLabels" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Name" type="HBoxContainer" parent="MarginContainer/PlayerStatLabels"]
layout_mode = 2
size_flags_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/PlayerStatLabels/Name"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("2_ctm6i")
expand_mode = 1

[node name="NameLabel" type="Label" parent="MarginContainer/PlayerStatLabels/Name"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/line_spacing = 0
text = "ERIN"
vertical_alignment = 2

[node name="HP" type="HBoxContainer" parent="MarginContainer/PlayerStatLabels"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HPLabel" type="Label" parent="MarginContainer/PlayerStatLabels/HP"]
layout_mode = 2
size_flags_horizontal = 3
text = "HP"

[node name="HPValue" type="Label" parent="MarginContainer/PlayerStatLabels/HP"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
text = "08"
horizontal_alignment = 2

[node name="Slash" type="Label" parent="MarginContainer/PlayerStatLabels/HP"]
layout_mode = 2
text = "/"

[node name="HPMaxValue" type="Label" parent="MarginContainer/PlayerStatLabels/HP"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
text = "12"

[node name="MP" type="HBoxContainer" parent="MarginContainer/PlayerStatLabels"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MPLabel" type="Label" parent="MarginContainer/PlayerStatLabels/MP"]
layout_mode = 2
size_flags_horizontal = 3
text = "MP"

[node name="MPValue" type="Label" parent="MarginContainer/PlayerStatLabels/MP"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
text = "00"
horizontal_alignment = 2

[node name="Slash" type="Label" parent="MarginContainer/PlayerStatLabels/MP"]
layout_mode = 2
text = "/"

[node name="MPMaxValue" type="Label" parent="MarginContainer/PlayerStatLabels/MP"]
custom_minimum_size = Vector2(22, 0)
layout_mode = 2
text = "00"
